--- a/historico-motor.html
+++ b/historico-motor.html
@@ -13,34 +13,27 @@
   </style>
 </head>
 <body>
+  <div style="display: flex; align-items: center; border-bottom: 2px solid #ccc; padding-bottom: 10px; margin-bottom: 20px;">
+    <img src="logo-pm.png" alt="Logotipo Polícia Marítima" style="height: 50px; margin-right: 15px;">
+    <h1 style="font-size: 1.8em; margin: 0;">Validador Marítimo</h1>
+  </div>
 
-<div style="display: flex; align-items: center; border-bottom: 2px solid #ccc; padding-bottom: 10px; margin-bottom: 20px;">
-  <img src="logo-pm.png" alt="Logotipo Polícia Marítima" style="height: 50px; margin-right: 15px;">
-  <h1 style="font-size: 1.8em; margin: 0;">Validador Marítimo</h1>
-</div>
- onload="carregarHistoricoMotor()">
-  <h2>Histórico de Validações de Motores</h2>
-  <button onclick="voltar()">⬅ Voltar ao Validador</button>
+  <h2>Histórico de Validações Motores</h2>
+  <button onclick="location.href='validador.html'">⬅ Voltar ao Validador</button>
   <div id="tabelaHistorico"></div>
 
   <script>
-    function voltar() {
-      window.location.href = 'validador.html';
-    }
-
-    function carregarHistoricoMotor() {
-      const historico = JSON.parse(localStorage.getItem('hisMotor') || '[]');
-      let html = '<table><tr><th style='font-weight:bold'>Data</th><th style='font-weight:bold'>Marca</th><th style='font-weight:bold'>Campo1</th><th style='font-weight:bold'>Campo2</th><th style='font-weight:bold'>Válido</th><th style='font-weight:bold'>Mensagem</th><th style='font-weight:bold'>Foto</th></tr>';
+    function carregarHistoricoMotores() {
+      const historico = JSON.parse(localStorage.getItem('hisMotores') || '[]');
+      let html = '<table><tr><th>Data</th><th>Motores</th><th>Válido</th><th>Mensagem</th><th>Foto</th></tr>';
       historico.forEach((item, i) => {
         const foto = item.foto || 'placeholder.jpg';
         html += `<tr>
-          <td style='font-size:15px'>${item.data}</td>
-          <td style='font-size:15px'>${item.marca}</td>
-          <td style='font-size:15px'>${item.campo1}</td>
-          <td style='font-size:15px'>${item.campo2 || ''}</td>
-          <td style='font-size:15px'>${item.valido}</td>
-          <td style='font-size:15px'>${item.msg}</td>
-          <td style='font-size:15px'>
+          <td>${item.data}</td>
+          <td>${item.marca}</td>
+          <td>${item.valido}</td>
+          <td>${item.msg}</td>
+          <td>
             <img src="${foto}" class="foto" id="img${i}"><br>
             <input type="file" accept="image/*" onchange="guardarFoto(this, ${i})">
           </td>
@@ -55,13 +48,15 @@
       if (!file) return;
       const reader = new FileReader();
       reader.onload = function(e) {
-        const historico = JSON.parse(localStorage.getItem('hisMotor') || '[]');
+        const historico = JSON.parse(localStorage.getItem('hisMotores') || '[]');
         historico[index].foto = e.target.result;
-        localStorage.setItem('hisMotor', JSON.stringify(historico));
+        localStorage.setItem('hisMotores', JSON.stringify(historico));
         document.getElementById('img' + index).src = e.target.result;
       };
       reader.readAsDataURL(file);
     }
+
+    window.addEventListener('DOMContentLoaded', carregarHistoricoMotores);
   </script>
 </body>
 </html>
