--- a/historico-win.html
+++ b/historico-win.html
@@ -13,32 +13,27 @@
   </style>
 </head>
 <body>
+  <div style="display: flex; align-items: center; border-bottom: 2px solid #ccc; padding-bottom: 10px; margin-bottom: 20px;">
+    <img src="logo-pm.png" alt="Logotipo Polícia Marítima" style="height: 50px; margin-right: 15px;">
+    <h1 style="font-size: 1.8em; margin: 0;">Validador Marítimo</h1>
+  </div>
 
-<div style="display: flex; align-items: center; border-bottom: 2px solid #ccc; padding-bottom: 10px; margin-bottom: 20px;">
-  <img src="logo-pm.png" alt="Logotipo Polícia Marítima" style="height: 50px; margin-right: 15px;">
-  <h1 style="font-size: 1.8em; margin: 0;">Validador Marítimo</h1>
-</div>
- onload="carregarHistoricoWIN()">
   <h2>Histórico de Validações WIN</h2>
-  <button onclick="voltar()">⬅ Voltar ao Validador</button>
+  <button onclick="location.href='validador.html'">⬅ Voltar ao Validador</button>
   <div id="tabelaHistorico"></div>
 
   <script>
-    function voltar() {
-      window.location.href = 'validador.html';
-    }
-
     function carregarHistoricoWIN() {
       const historico = JSON.parse(localStorage.getItem('hisWIN') || '[]');
-      let html = '<table><tr><th style='font-weight:bold'>Data</th><th style='font-weight:bold'>WIN</th><th style='font-weight:bold'>Válido</th><th style='font-weight:bold'>Mensagem</th><th style='font-weight:bold'>Foto</th></tr>';
+      let html = '<table><tr><th>Data</th><th>WIN</th><th>Válido</th><th>Mensagem</th><th>Foto</th></tr>';
       historico.forEach((item, i) => {
         const foto = item.foto || 'placeholder.jpg';
         html += `<tr>
-          <td style='font-size:15px'>${item.data}</td>
-          <td style='font-size:15px'>${item.win}</td>
-          <td style='font-size:15px'>${item.valido}</td>
-          <td style='font-size:15px'>${item.msg}</td>
-          <td style='font-size:15px'>
+          <td>${item.data}</td>
+          <td>${item.win}</td>
+          <td>${item.valido}</td>
+          <td>${item.msg}</td>
+          <td>
             <img src="${foto}" class="foto" id="img${i}"><br>
             <input type="file" accept="image/*" onchange="guardarFoto(this, ${i})">
           </td>
@@ -60,6 +55,8 @@
       };
       reader.readAsDataURL(file);
     }
+
+    window.addEventListener('DOMContentLoaded', carregarHistoricoWIN);
   </script>
 </body>
 </html>
